//
//  serviceMan_reduxUITests.swift
//  serviceMan-reduxUITests
//
//  Created by Pavel Odstrčilík on 29.04.2023.
//

import XCTest

final class serviceMan_reduxUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        let app = XCUIApplication()
        app.launch()

        XCTAssertTrue(app.staticTexts["Jméno"].exists)

        XCTAssertTrue(app.staticTexts["Heslo"].exists)

        let nameTextField = app.textFields["Jméno"]
        XCTAssertTrue(nameTextField.exists)

        nameTextField.tap()

        nameTextField.typeText("pavelodstrcilik")

        let passwordSecureTextField = app.secureTextFields["Heslo"]
        XCTAssertTrue(passwordSecureTextField.exists)

        passwordSecureTextField.tap()
        passwordSecureTextField.typeText("123456789")

        let logInButton = app.buttons["Přihlásit se"]
        XCTAssertTrue(logInButton.exists)
        logInButton.tap()
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
